# twitter-bot-toggl

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tweet.yml
src/: toggl.py  tweet.py
test/: test_toggl.py  test_tweet.py
